--- a/dzerver.cabal
+++ b/dzerver.cabal
@@ -22,6 +22,7 @@ maintainer:         norbert@perun.network
 extra-source-files: CHANGELOG.md
 
 executable dzerver
+    ghc-options:        -Wall
     main-is:            Main.hs
 
     -- Modules included in this executable, other than Main.
@@ -41,6 +42,7 @@ executable dzerver
     default-language:   Haskell2010
 
 library dzerver-lib
+    ghc-options:        -Wall
     exposed-modules:    Dzerver.Modules.Map
                         , Dzerver.Modules.GPS
     build-depends:      base ^>=4.14.3.0
@@ -55,9 +57,13 @@ test-suite dzerver-test
     ghc-options:        -threaded
                         -rtsopts
                         -with-rtsopts=-N
+                        -Wall
+                        -Wno-orphans
     default-language:   Haskell2010
     other-modules:      Test.Modules.GPS
     build-depends:      base ^>=4.14.3.0
                         , dzerver-lib
                         , QuickCheck
                         , ieee754
+                        , tasty
+                        , tasty-quickcheck
