--- a/dzerver.cabal
+++ b/dzerver.cabal
@@ -45,10 +45,14 @@ library dzerver-lib
     ghc-options:        -Wall
     exposed-modules:    Dzerver.Modules.Map
                         , Dzerver.Modules.GPS
+                        , Dzerver.Modules.DB
+                        , Dzerver
     build-depends:      base ^>=4.14.3.0
                         , aeson
                         , bytestring
                         , freer-simple
+                        , lens
+                        , containers
     hs-source-dirs:     lib
     default-language:   Haskell2010
 
